--- a/src/ng-vcl/dropdown/dropdown.component.html
+++ b/src/ng-vcl/dropdown/dropdown.component.html
@@ -28,7 +28,7 @@
       [class.vclDisabled]="metaItem.disabled"
       [class.vclHighlighted]="metaItem.marked"
       [attr.aria-selected]="metaItem.selected"
-      (tap)="metalist.select(metaItem)">
+      (tap)="onMetalistItemTap(item)">
       <div *ngIf="item.label" class="vclDropdownItemLabel">
         {{item.label}}
       </div>
