--- a/demo/ng-vcl/demo-components/slider/demo.component.html
+++ b/demo/ng-vcl/demo-components/slider/demo.component.html
@@ -1,33 +1,30 @@
 <h3>basic:</h3>
-<vcl-slider [(value)]="value1">
->
-</vcl-slider>
+<vcl-slider [(ngModel)]="value1"></vcl-slider>
 Value: {{value1}}
 
-<h3>With a generated scale:</h3>
+<h3>With a scale:</h3>
 <vcl-slider 
-  [(value)]="value2" 
+  [(ngModel)]="value2" 
   [min]="0" 
   [max]="100"
-  [scale]="true" 
-  [step]="10">
+  [scale]="10">
 </vcl-slider>
 Value: {{value2}}
 
-<h3>With value locked to steps:</h3>
+<h3>With value locked to the scale:</h3>
 <vcl-slider 
-  [(value)]="value3" 
+  [(ngModel)]="value3" 
   [min]="0" 
   [max]="100"
-  [lock]="true" 
-  [step]="10">
+  [scale]="10"
+  [lock]="true" >
 </vcl-slider>
 Value: {{value3}}
 
 
-<h3>labeled steps:</h3>
+<h3>custom labeled scale:</h3>
 <vcl-slider 
-  [(value)]="value4" 
+  [(ngModel)]="value4" 
   [min]="0" 
   [max]="5" 
   [mousewheel]="true" 
@@ -36,14 +33,10 @@ Value: {{value3}}
 Value: {{value4}}
 
 
-<h3>default values:</h3>
-<vcl-slider [(value)]="value5"></vcl-slider>
-Value: {{value5}}
-
 <h3>disabled:</h3>
 
 <vcl-slider 
-  [(value)]="value6" 
+  [(ngModel)]="value5" 
   [min]="0" 
   [max]="7" 
   [disabled]="true" 
