mixed aot preparations

--- a/src/ng-vcl/dropdown/dropdown.component.html
+++ b/src/ng-vcl/dropdown/dropdown.component.html
@@ -5,8 +5,7 @@
   class="vclDropdown vclOpen"
   role="listbox"
   [attr.tabindex]="tabindex"
-  [attr.aria-multiselectable]="maxSelectableItems > 1"
-  [attr.aria-expanded]="expanded"
+  [attr.aria-multiselectable]="mode === 'multiple'"
   [style.position]="'static'"
   (change)="onMetalistChange($event)"
   (blur)="onMetalistBlur()"
