--- a/src/ng-vcl/month-picker/month-picker.component.html
+++ b/src/ng-vcl/month-picker/month-picker.component.html
@@ -1,7 +1,7 @@
 <div class="vclDatePicker"
     [class.vclLayoutHidden]="!expanded">
   <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput"
-    [attr.role]="grid"
+    [attr.role]="'grid'"
     [attr.tabindex]="tabindex"
     [attr.aria-multiselectable]="maxSelectableItems > 1"
     [attr.aria-expanded]="expanded">
