--- a/src/ng-vcl/progress-bar/progress-bar.component.html
+++ b/src/ng-vcl/progress-bar/progress-bar.component.html
@@ -1,7 +1,7 @@
 <div class="vclProgressBar"
      [attr.aria-valuenow]="value" 
      [attr.aria-valuemin]="minValue" 
-     [attr.aria-valuenow]="aria-valuemax" 
+     [attr.aria-valuemax]="maxValue" 
      [attr.aria-valuetext]="label"
      [class.vclIndeterminate]="showIndeterminate"
      >
