tooltip: top position

--- a/src/ng-vcl/tooltip/tooltip.component.html
+++ b/src/ng-vcl/tooltip/tooltip.component.html
@@ -1,4 +1,4 @@
-﻿<div role="tooltip" [class]="tooltipPosiiton">
+﻿<div [style.margin-left]="tooltipOffsetHorizontal" [style.margin-top]="tooltipOffsetVertical" role="tooltip" [class]="tooltipPosiiton">
     <div class="vclTooltipContent">{{content}}</div>
     <div class="vclArrowPointer"></div>
 </div>
