--- a/src/ng-vcl/month-picker/month-picker.component.html
+++ b/src/ng-vcl/month-picker/month-picker.component.html
@@ -1,9 +1,9 @@
 <div class="vclDatePicker"
     [class.vclLayoutHidden]="!expanded">
   <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput"
-    [attr.role]="grid"
+    [attr.role]="'grid'"
     [attr.tabindex]="tabindex"
-    [attr.aria-multiselectable]="maxSelectableItems > 1"
+    [attr.aria-multiselectable]="maxSelectableMonths > 1"
     [attr.aria-expanded]="expanded">
 
     <div class="vclLayoutFlex vclDGRow vclLayoutAuto">
@@ -36,7 +36,7 @@
 
     <div class="vclSeparator"></div>
 
-    <template ngFor let-iM [ngForOf]="months" let-i="index">
+    <ng-template ngFor let-iM [ngForOf]="months" let-i="index">
       <div *ngIf="i % monthsPerRow === 0" class="vclLayoutFlex vclDGRow vclLayoutAuto" role="row">
         <div *ngFor="let jM of months.slice(i, (i + monthsPerRow > months.length ? months.length : i + monthsPerRow)); let j = index;"
           (click)="selectMonth(currentYear, i+j)"
@@ -57,6 +57,6 @@
             </div>
         </div>
       </div>
-    </template>
+    </ng-template>
   </div>
 </div>
