alert: fix: button label

--- a/src/ng-vcl/alert/alert.component.html
+++ b/src/ng-vcl/alert/alert.component.html
@@ -40,7 +40,7 @@
           <vcl-icogram
             *vclButtonStateContent="'busy'"
             prepIcon="fa:refresh fa-spin"
-            [label]="!!alert.confirmButtonLabel">
+            [label]="alert.confirmButtonLabel">
           </vcl-icogram>
       </button>
       <button vcl-button
