[button]: add appIconSrc and prepIconSrc; [month-picker]; some refactoring; [plotly]: add after relayout debug info

--- a/src/ng-vcl/button/button.component.html
+++ b/src/ng-vcl/button/button.component.html
@@ -2,6 +2,8 @@
   [label]="label"
   [flexLabel]="flexLabel"
   [prepIcon]="prepIcon"
-  [appIcon]="appIcon">
+  [appIcon]="appIcon"
+  [appIconSrc]="appIconSrc"
+  [prepIconSrc]="prepIconSrc">
   <ng-content></ng-content>
 </vcl-icogram>
