--- a/demo/app/demos/tooltip/demo.component.html
+++ b/demo/app/demos/tooltip/demo.component.html
@@ -1,16 +1,14 @@
-
-<p>
-    Lorem <a vcl-tooltip content="tooltip">tooltip top</a> ipsum dolor  exercitation ullamco laboris
-</p>
-
-<p>
-    Lorem ipsum <a vcl-tooltip position="right" content="tooltip">tooltip right</a> dolor  exercitation ullamco laboris
-</p>
-
-<p>
-    Lorem ipsum dolor exercitation <a vcl-tooltip position="bottom" content="tooltip">tooltip bottom</a> ullamco laboris
-</p>
-
-<p>
-    Lorem ipsum dolor exercitation ullamco <a vcl-tooltip position="left" content="tooltip">tooltip left</a>  laboris
-</p>
+<div style="display: flex;height:100px">
+  <div  vcl-tooltip content="Tooltip on the top" style="background-color:#E6E6E6;flex:1">
+    <p>Tooltip on the top</p>
+  </div>
+  <div vcl-tooltip position="right" content="Tooltip on the right" style="background-color:#D8D8D8;flex:1">
+    <p>Tooltip on the right</p>
+  </div>
+  <div vcl-tooltip position="left" content="Tooltip on the left" style="background-color:#BDBDBD;flex:1">
+    <p>Tooltip on the left</p>
+  </div>
+  <div vcl-tooltip position="bottom" content="Tooltip on the bottom" style="background-color:#A4A4A4;flex:1">
+    <p>Tooltip on the bottom</p>
+  </div>
+</div>
