--- a/src/ng-vcl/tooltip/tooltip.component.html
+++ b/src/ng-vcl/tooltip/tooltip.component.html
@@ -1,5 +1,5 @@
 ﻿<div [@enterAnimation]="animationState" [style.left]="tooltipPlacement.Left + 'px'" [style.top]="tooltipPlacement.Top + 'px'"
-  style="opacity:0; white-space:nowrap;" role="tooltip" [class]="tooltipPosition">
+  style="white-space:nowrap;" role="tooltip" [class]="tooltipPosition">
   <div class="vclTooltipContent">
     {{content}}
   </div>
