custom tooltip proper alignment

--- a/demo/app/demos/tooltip/demo.component.html
+++ b/demo/app/demos/tooltip/demo.component.html
@@ -15,6 +15,8 @@
 <div style="display: flex;height:100px">
   <div #hostContainer style="background-color:#A4A4A4;flex:0.25">
     <p>Custom tooltip</p>
-    <vcl-tooltip [hostElement]="hostContainer" content="Custom tooltip"></vcl-tooltip>
+    <vcl-tooltip [hostElement]="hostContainer">
+      Custom tooltip
+    </vcl-tooltip>
   </div>
 </div>
