--- a/src/ng-vcl/tooltip/tooltip.component.html
+++ b/src/ng-vcl/tooltip/tooltip.component.html
@@ -2,6 +2,7 @@
   style="white-space:nowrap;" role="tooltip" [class]="tooltipPosition">
   <div class="vclTooltipContent">
     {{content}}
+    <ng-content></ng-content>
   </div>
   <div class="vclArrowPointer"></div>
 </div>
