--- a/demo/app/demos/tooltip/demo.component.html
+++ b/demo/app/demos/tooltip/demo.component.html
@@ -20,7 +20,7 @@
     </vcl-tooltip>
   </div>
   <div #hostContainer2 style="background-color:#BDBDBD;flex:0.25">
-    <p>Custom tooltip</p>
+    <p>Custom tooltip with rich content</p>
     <vcl-tooltip [hostElement]="hostContainer2" placement="right">
       <my-tooltip-sample></my-tooltip-sample>
     </vcl-tooltip>
