--- a/src/ng-vcl/layer/layer-container.component.html
+++ b/src/ng-vcl/layer/layer-container.component.html
@@ -1,17 +1,17 @@
 <div 
   #container 
   class="vclLayer"
-  [ngClass]="layer.customClass"
-  [class.vclTransparent]="layer.transparent"
-  [class.vclLayerFill]="layer.fill"
-  [class.vclLayerStickToBottom]="layer.stickToBottom"
+  [ngClass]="layerOpts.customClass"
+  [class.vclTransparent]="layerOpts.transparent"
+  [class.vclLayerFill]="layerOpts.fill"
+  [class.vclLayerStickToBottom]="layerOpts.stickToBottom"
   [style.z-index]="zIndex + 1"
   [style.pointer-events]="'all'" 
   role="dialog" 
   (tap)='triggerOffClick($event)'
   >
-  <div #box class="vclLayerBox" [class.vclLayerGutterPadding]="layer.gutterPadding" [style.pointer-events]="'all'" [style.z-index]="zIndex + 2">
+  <div #box class="vclLayerBox" [class.vclLayerGutterPadding]="layerOpts.gutterPadding" [style.pointer-events]="'all'" [style.z-index]="zIndex + 2">
     <div #layerContent></div>
   </div>
 </div>
-<div #cover *ngIf="layer.modal" class="vclLayerCover" [style.z-index]="zIndex"></div>
+<div #cover *ngIf="layerOpts.modal" class="vclLayerCover" [style.z-index]="zIndex"></div>
