add sort icon component

--- a/demo/app/demos/table/demo.component.html
+++ b/demo/app/demos/table/demo.component.html
@@ -3,9 +3,11 @@
     <tr>
       <th [span]="50" sort tabindex="0" role="button">
         <span>Default Column</span>
+        <sort-icon></sort-icon>
       </th>
       <th [span]="20" sort tabindex="0" role="button">
         <span>Right aligned Column</span>
+        <sort-icon></sort-icon>
       </th>
       <th [span]="20">
         <span>Centered Column</span>
