--- a/demo/app/demos/table/demo.component.html
+++ b/demo/app/demos/table/demo.component.html
@@ -1,11 +1,11 @@
-<table hover altrow vertical-border align-middle fixed role="listbox">
+<table vcl-table hover altrow vertical-border align-middle fixed>
   <thead>
     <tr>
-      <th [span]="50" sort tabindex="0" role="button">
-        <span>Default Column</span>
+      <th [span]="50" sort (change)="OnSortingDefaultColumn($event)">
+        <span>Default Column ({{defaultColumnSortName}})</span>
         <sort-icon></sort-icon>
       </th>
-      <th [span]="20" sort tabindex="0" role="button">
+      <th [span]="20" sort (change)="OnSortingRightColumn($event)">
         <span>Right aligned Column</span>
         <sort-icon></sort-icon>
       </th>
@@ -24,17 +24,19 @@
       <td align-center></td>
     </tr>
     <tr>
-      <td nowrap><a href="#vclTable0">Lorem ipsum dolor sit amet</a>, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-        ut labore et dolore magna aliquyam erat, sed diam voluptua.</td>
+      <td nowrap>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+        voluptua.</td>
       <td [align-right]="true">11.000</td>
       <td align-center>Sent</td>
       <td align-center></td>
     </tr>
     <tr>
-      <td overflow-ellipsis>Truncated content. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-        sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</td>
+      <td [overflow-ellipsis]="readMore"><a *ngIf="readMore" (click)="readMore = false">Read more</a> Truncated content. Lorem ipsum dolor sit amet, consetetur
+        sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+        ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+        ut labore et dolore magna aliquyam erat, sed diam voluptua.
+      </td>
       <td [align-right]="true">11.000</td>
       <td hightlight align-center>N/A</td>
       <td align-center></td>
@@ -45,8 +47,8 @@
       <td hightlight align-center>On hold</td>
       <td align-center></td>
     </tr>
-    <tr selectable [selected]="true">
-      <td>Selected row.</td>
+    <tr selectable (click)="isSelected = !isSelected" [selected]="isSelected">
+      <td>Click to unselect</td>
       <td [align-right]="true">11.000</td>
       <td hightlight align-center>N/A</td>
       <td align-center></td>
