compatible with aot compiler

--- a/demo/app/demos/table/demo.component.html
+++ b/demo/app/demos/table/demo.component.html
@@ -5,7 +5,7 @@
         <span>Default Column ({{defaultColumnSortName}})</span>
         <sort-icon></sort-icon>
       </th>
-      <th [span]="20" sort (change)="OnSortingRightColumn($event)">
+      <th [span]="20" sort>
         <span>Right aligned Column</span>
         <sort-icon></sort-icon>
       </th>
