--- a/src/ng-vcl/token/token.component.html
+++ b/src/ng-vcl/token/token.component.html
@@ -4,6 +4,6 @@
         class="vclTransparent"
         type="button" 
         title="Remove"
-        appIcon="fa:remove"
+        [appIcon]="icon"
         (click)="onRemoveClick($event)">
 </button>
