trigger change detection when ngModel value updates

--- a/demo/app/demos/checkbox/demo.component.html
+++ b/demo/app/demos/checkbox/demo.component.html
@@ -16,3 +16,8 @@
 <vcl-checkbox [(checked)]="isChecked3" labelPosition="left">
   <label vcl-form-control-label label="rightLabel" subLabel="SubRightLabel"></label>
 </vcl-checkbox>
+
+<h3>Checkbox (ngModel):</h3>
+<vcl-checkbox [(ngModel)]="isChecked4"></vcl-checkbox>
+<br>
+<b>State:</b> {{isChecked4}}
