date-picker: ui optimizations, fixes + refactoring

--- a/demo/app/demos/date-picker/demo.component.html
+++ b/demo/app/demos/date-picker/demo.component.html
@@ -1,8 +1,8 @@
 <h3>Default Datepicker</h3>
-<vcl-date-picker style="width: 18em; border: 1px solid; margin: 20px;"></vcl-date-picker>
+<vcl-date-picker style="width: 18em;"></vcl-date-picker>
 
 <h3>Ranged Datepicker</h3>
-<vcl-date-picker style="width: 18em; border: 1px solid; margin: 20px;" 
+<vcl-date-picker style="width: 18em;" 
                  [selectedDate]="selectedDate" 
                  [selectedRangeEnd]="selectedRangeEnd" 
                  [selectRange]="selectRange" 
@@ -11,7 +11,7 @@
 </vcl-date-picker>
 
 <h3>Minimal Datepicker</h3>
-<vcl-date-picker style="width: 25em; border: 1px solid; margin: 20px;" 
+<vcl-date-picker style="width: 25em;" 
                 [displayJumpToday]="false" 
                 [displayJumpSelected]="false" 
                 [displayWeekNumbers]="false" 
