Update deps, update vcl to 0.2 + enable live reloading for styles

--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -119,5 +119,5 @@ code.hljs
 
 // json-editor
 .jsoneditor-frame input
-  min-height: 0.5em !important;
+  min-height: 0.5em !important
 // json-editor
