--- a/demo/styles/index.styl
+++ b/demo/styles/index.styl
@@ -1,7 +1,8 @@
-@import "vcl-default-theme-terms"
-@import "vcl-default-theme"
+@import "@vcl/breakpoints"
+@import "@vcl/default-theme-terms"
+@import "@vcl/default-theme"
 @import "normalize.css"
-@import "vcl-core-modules"
-@import "vcl-font-awesome"
+@import "@vcl/core-modules"
+@import "@vcl/font-awesome"
 @import "./demo.styl"
 @import "./md.css"
